--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/login_label" />
+        <activity android:name=".TrafficMonitorActivity"></activity>
     </application>
 
 </manifest>
