--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" tools:ignore="ProtectedPermissions" />
+    <uses-permission
+        android:name="android.permission.PACKAGE_USAGE_STATS"
+        tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
@@ -34,7 +35,8 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/login_label" />
-        <activity android:name=".TrafficMonitorActivity"></activity>
+        <activity android:name=".TrafficMonitorActivity" />
+        <activity android:name=".ReceptorActivity"></activity>
     </application>
 
 </manifest>
